RandomUserViewModelTest